закончила colors&types, научилась применять миксины в pug

--- a/toxin/src/pug/base.pug
+++ b/toxin/src/pug/base.pug
@@ -1,7 +1,3 @@
-//- include ../components/header/header
-//- include ../components/footer/footer
-//- block variables
-
 doctype html
 html
     head
@@ -15,3 +11,4 @@ html
         block main
         block rectangles-section
         block widgets-section
+        block menu
