--- a/toxin/src/pug/pages/uikit/colorsandtype/colorsandtype.scss
+++ b/toxin/src/pug/pages/uikit/colorsandtype/colorsandtype.scss
@@ -7,6 +7,10 @@
 }
 
 /*section rectangles pages colorsandtype*/
+.rectangles {
+    margin-bottom: 20px;
+}
+
 .rectangle {
     position: absolute;
     width: 70px;
