начала страницу form elements, упорядочила папки

--- a/toxin/src/pages/header/header.pug
+++ b/toxin/src/pages/header/header.pug
@@ -1,9 +1,9 @@
-extends ../../../base
+extends ../../base
 
 block title
     | Header
 block main
-    include ../../../../components/logo/logo-main
+    include ../../blocks/logo/logo-main
 
 block menu
   .menu-wrapper
