закончила верстать text-fields в Form elements, начала работу над dropdown

--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -7,6 +7,7 @@ html
             block title
         //- link(rel="stylesheet", href="assets/css/app.css")
         link(href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:700&display=swap" rel="stylesheet")
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     body
         block main
         block rectangles-section
