--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -7,10 +7,13 @@ html
             block title
         //- link(rel="stylesheet", href="assets/css/app.css")
         link(href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:700&display=swap" rel="stylesheet")
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+        link(href="./blocks/form-elements/dropdown-config/item-quantity-dropdown.min.css" rel="stylesheet")
     body
         block main
         block rectangles-section
         block widgets-section
         block menu
         block form-section
+
+    script(src="./blocks/form-elements/dropdown-config/item-quantity-dropdown.min.js")
