--- a/toxin/src/pages/form-elements/form-elements.scss
+++ b/toxin/src/pages/form-elements/form-elements.scss
@@ -24,6 +24,11 @@ html, body {
     top: 30px;
 }
 
+.form-elements{
+    max-width: 320px;
+    width: 100%;
+}
+
 .form-elements-item--default{
     margin-bottom: 40px;
     margin-top: 85px;
@@ -31,28 +36,28 @@ html, body {
 
 .form-elements__descr {
     //position: absolute;
-    width: 72px;
-    height: 15px;
-    left: 141px;
-    top: 143px;
+    // width: 72px;
+    // height: 15px;
+    // left: 141px;
+    // top: 143px;
     font-family: Montserrat, OpenSans, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
-    line-height: 15px;
+    //line-height: 15px;
     text-transform: uppercase;    
     color: #1F2041;
     margin-bottom: 5px;
 }
 
 .text-field {
-    border: 1px solid rgba(31, 32, 65, 0.25);
     background: #FFFFFF;
     box-sizing: border-box;
-    border-radius: 4px;
     width: 320px;
     height: 44px;
     padding: 13px 15px 13px 15px;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
 }
 
 .text-field:hover{
@@ -68,19 +73,120 @@ html, body {
 
 /* Dropdown */
 
-.material-icons{
-    position: absolute;
-    width: 44px;
+
+.form-elements__input--dropdown{
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
+    width: 320px;
     height: 44px;
-    left: 416.74px;
-    top: 331px;
+    cursor: pointer;
+}
+
+.material-icons{
+    width: 44px;
+    height: 30px;
     font-family: Material Icons;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 24px;
-    display: flex;
-    align-items: center;
     text-align: center;
     color: rgba(31, 32, 65, 0.5);
+    position: absolute;
+    top: 372px;
+}
+
+.text-field--dropdown{
+    width: 268px;
+    height: 42px;
+    border: 0;
+    outline: none;
+    margin-left: 5px;
+    cursor: pointer;
+    user-select: none;
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.dropdown__menu{
+    border: 1px solid rgba(31,32,65,0.25);
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+    width: 319px;
+    height: 159px;
+    display: none;
+}
+
+.dropdown__menu--open{
+    display: block;
+}
+
+.dropdown__menu-option{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+    color: #1F2041;
+    padding: 10px 0 0 15px;
+    vertical-align: middle;
+    line-height: 32px;
+}
+
+.dropdown__controls{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100px;
+    padding-right: 7px;
+}
+
+.dropdown__minus, .dropdown__plus{
+    width: 30px;
+    height: 30px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    text-align: center;
+    color: rgba(31, 32, 65, 0.5);
+    border: 1px solid rgba(31,32,65,0.5);
+    border-radius: 50%;
+    line-height: 1.875rem;
+    user-select: none;
+    cursor: pointer;
+}
+
+/* dropdown btn */
+
+.dropdown__buttons {
+    height: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 9px 7px 0 15px;
+}
+
+
+.clear-btn, .apply-btn{
+    border: 0;
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: rgba(31, 32, 65, 0.5);
+    background-color: inherit;
+    cursor: pointer;
+}
+
+.clear-btn:focus, .apply-btn:focus {
+    outline: none;
 }
