добавлен плагин air-datepicker и стилизован согласно макету

--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -8,6 +8,7 @@ html
         //- link(rel="stylesheet", href="assets/css/app.css")
         link(href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:700&display=swap" rel="stylesheet")
         link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+        link(href="/src/blocks/form-elements/calendar/calendar.css" rel="stylesheet" type="text/css")
     body
         block main
         block rectangles-section
@@ -15,4 +16,4 @@ html
         block menu
         block form-section
 
-    script(src="./blocks/form-elements/dropdown-config/item-quantity-dropdown.min.js")
+        script(src="/src/blocks/form-elements/calendar/calendar.js")
