--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -5,10 +5,17 @@ html
         meta(name='viewport', content="initial-scale=1.0, width=device-width")
         title
             block title
-        //- link(rel="stylesheet", href="assets/css/app.css")
         link(href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:700&display=swap" rel="stylesheet")
         link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
-        link(href="/src/blocks/form-elements/calendar/calendar.css" rel="stylesheet" type="text/css")
+        link(rel="stylesheet" href="src/assets/fonts/font-awesome/css/font-awesome.min.css")
+        link(href="/src/blocks/form-elements/calendar/calendar.scss")
+        link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
+        link(rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png")
+        link(rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png")
+        link(rel="manifest" href="/site.webmanifest")
+        link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
+        meta(name="msapplication-TileColor" content="#da532c")
+        meta(name="theme-color" content="#ffffff")
     body
         block main
         block rectangles-section
@@ -16,4 +23,4 @@ html
         block menu
         block form-section
 
-        script(src="/src/blocks/form-elements/calendar/calendar.js")
+        script(src="/src/blocks/form-elements/calendar/calendar.js" type="module")
