--- a/toxin/src/blocks/form-elements/calendar/calendar.scss
+++ b/toxin/src/blocks/form-elements/calendar/calendar.scss
@@ -68,9 +68,9 @@
     .datepicker--cell.-current-.-in-range- {
       color: #4EB5E6; }
   .datepicker--cell.-in-range- {
-    background: rgba(92, 196, 239, 0.1);
-    color: #4a4a4a;
-    border-radius: 0; }
+    background: linear-gradient(180deg, rgba(189,158,255,0.25) 0%, rgba(139,165,249,0.25) 100%);
+    color: rgba(31,32,65,0.5);
+  }
     .datepicker--cell.-in-range-.-focus- {
       background-color: rgba(92, 196, 239, 0.2); }
   .datepicker--cell.-disabled- {
@@ -85,7 +85,9 @@
   .datepicker--cell.-range-from- {
     border: 1px solid rgba(92, 196, 239, 0.5);
     background-color: rgba(92, 196, 239, 0.1);
-    border-radius: 4px 0 0 4px; }
+    border-radius: 4px 0 0 4px; 
+    position: relative;
+  }
   .datepicker--cell.-range-to- {
     border: 1px solid rgba(92, 196, 239, 0.5);
     background-color: rgba(92, 196, 239, 0.1);
@@ -94,11 +96,15 @@
     border-radius: 4px; }
   .datepicker--cell.-selected- {
     color: #fff;
-    border: none;
-    background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
-    border-radius: 22px;
+    // border: none;
+    //background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+    //border-radius: 22px;
     height: 40px;
     width: 40px;
+    border-radius: 50%;
+    background-image: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-weight: bold;
 }
     .datepicker--cell.-selected-.-current- {
         color: #fff;
@@ -202,6 +208,12 @@
     .datepickers-container {
       display: none; } }
 
+      .one {
+        width:100%;
+        margin: 10px;
+      }
+       
+
 .datepicker {
   background: #fff;
   border: 1px solid #dbdbdb;
@@ -215,6 +227,7 @@
   position: absolute;
   left: -100000px;
   opacity: 0;
+  margin-top: 5px;
   transition: opacity 0.3s ease, left 0s 0.3s, -webkit-transform 0.3s ease;
   transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s;
   transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s, -webkit-transform 0.3s ease;
@@ -254,7 +267,7 @@
 
 .datepicker--content {
   box-sizing: content-box;
-  padding: 4px; }
+  padding: 20px; }
   .-only-timepicker- .datepicker--content {
     display: none; }
 
@@ -447,9 +460,9 @@
     background: none;
     border: none; }
 
-/*datapicker buttons*/
+/*datepicker buttons*/
 
-.datapicker--buttons{
+.datepicker--buttons{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -463,7 +476,7 @@
     color: rgba(31, 32, 65, 0.5);
 }
 
-.datapicker--button.-apply-{
+.datepicker--button.-apply-{
     color: #BC9CFF;
 }
 
