--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -4,31 +4,35 @@ block title
     | Form Elements
 
 block main
-    include ../../blocks/logo/logo-grey
+    .logo-wrapper
+        include ../../blocks/logo/logo-grey
 
 block form-section
     .container
-        form(action="")
+        .form-elements__wrapper
             .form-elements.form-elements--left
                 .form-elements-item--default
-                    .form-elements__descr
-                        label(for="text-field-default") text field
-                    .form-elements__input
-                        input(class="text-field" id="text-field-default" type="email" placeholder="Email")
+                    form(action="")
+                        .form-elements__descr
+                            label(for="text-field-default") text field
+                        .form-elements__input
+                            input(class="text-field" id="text-field-default" type="email" placeholder="Email")
                 .form-elements-item--hover
-                    .form-elements__descr
-                        label(for="text-field-hover") text field
-                    .form-elements__input
-                        input(class="text-field" id="text-field-hover"  type="email" placeholder="Email")
+                    form(action="")
+                        .form-elements__descr
+                            label(for="text-field-hover") text field
+                        .form-elements__input
+                            input(class="text-field" id="text-field-hover"  type="email" placeholder="Email")
 
                 .form-elements-item
                     .form-elements__dropdown
-                        .form-elements__descr
-                            span dropdown
-                        .form-elements__input--dropdown
-                            input(class="text-field--dropdown" placeholder="Сколько гостей" readonly="readonly")
+                        form(action="")
+                            .form-elements__descr
+                                span dropdown
+                            .form-elements__input--dropdown
+                                input(class="text-field--dropdown" placeholder="Сколько гостей" readonly="readonly")
+                                i(class="material-icons") expand_more
 
-                            i(class="material-icons") expand_more
                             div(class="dropdown__menu")
                                 div(class="dropdown__menu-option" data-id="item-adult") 
                                     div(class="dropdown__item") Взрослые
@@ -57,25 +61,74 @@ block form-section
                                 
                 .form-elements-item
                     .form-elements__dropdown
-                        .form-elements__descr
-                            span  masked text field
-                        .form-elements__input--masked     
-                            input(class="text-field" type="text" placeholder="ДД.ММ.ГГГГ")    
+                        form(action="")
+                            .form-elements__descr
+                                span  masked text field
+                            .form-elements__input--masked     
+                                input(class="text-field" type="text" placeholder="ДД.ММ.ГГГГ")    
 
                 .form-elements-item
                     .form-elements__datepicker
-                        .datapicker-wrapper
+                        .datepicker-wrapper
                             .form-elements__descr
                                 span  date Dropdown
                             .form-elements__input--datepicker
-                                .datepicker--left
-                                    input(class="datepicker-here text-field--datepicker" placeholder="ДД.ММ.ГГГГ" type="text" id="datepicker-here" readonly)
+                                .datepicker--left#datepicker--left
+                                    input(class="text-field--datepicker text-field-datepicker--left" placeholder="ДД.ММ.ГГГГ" type="text" name="start" id="startDate" readonly)
                                     i(class="material-icons--left-datepicker") expand_more
 
-                        .datapicker-wrapper--right
+                        .datepicker-wrapper--right
                             .form-elements__descr
                                 span  date Dropdown
                             .form-elements__input--datepicker
-                                .datepicker--right
-                                    input(class="text-field--datepicker" placeholder="ДД.ММ.ГГГГ" type="text" id="datepicker--right" readonly)
+                                .datepicker--right#datepicker--right
+                                    input(class="text-field--datepicker text-field-datepicker--right" placeholder="ДД.ММ.ГГГГ" type="text" name="end" id="endDate" readonly)
                                     i(class="material-icons--left-datepicker") expand_more
+
+                .form-elements-item
+                    .form-elements__filter-date-wrapper
+                        form(action="")
+                            .form-elements__descr
+                                span  filter date dropdown 
+                            .form-elements__filter-date    
+                                input(class="text-field--filter datepicker-here" data-range="true" data-multiple-dates-separator=" - " type="text" placeholder="ДД.ММ.ГГГГ")    
+                                i(class="material-icons--filter") expand_more
+
+                .form-elements-item
+                    .form-elements__email-wrapper
+                        form(action="" method="get")
+                            .form-elements__descr
+                                span  subscription text field
+                            .form-elements__email-field
+                                    input(class="text-field--email" type="text" placeholder="Email")
+                                    i(class="material-icons--email subscription__button") arrow_forward
+
+                
+            <!-- здесь нужно будет продолжить левую часть верстки -->
+
+            .form-elements.form-elements--middle
+                .form-elements-item
+                    .form-elements__checkbox-wrapper
+                        form(action="")
+                            .form-elements__descr
+                                span  Checkbox Buttons
+                            .checkboxs
+                                .form-elements__checkbox
+                                    .js-checkbox
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-smoke")
+                                        label(for="checkbox-smoke" class="checkbox-descr") Можно курить
+                                            input(class="checkbox" type="checkbox" id="checkbox-smoke")
+                                .form-elements__checkbox
+                                    .js-checkbox
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-nursling")
+                                        label(for="checkbox-nursling" class="checkbox-descr") Можно с питомцами
+                                            input(class="checkbox" type="checkbox" id="checkbox-nursling")
+                                .form-elements__checkbox
+                                    .js-checkbox
+                                        div(class="checkbox__marks")
+                                            i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-guests")
+                                        label(for="checkbox-guests" class="checkbox-descr") Можно пригласить гостей (до 10 человек)
+                                            input(class="checkbox" type="checkbox" id="checkbox-guests")
+
