--- a/toxin/src/pages/form-elements/form-elements.scss
+++ b/toxin/src/pages/form-elements/form-elements.scss
@@ -16,12 +16,20 @@ html, body {
     margin: auto;
 }
 
+.form-elements__wrapper{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.logo-wrapper{
+    margin-top: 30px;
+    margin-bottom: 65px;
+}
+
 .logo {
-    position: relative;
     width: 48px;
     height: 48px;
-    //left: 30px;
-    top: 30px;
 }
 
 .form-elements{
@@ -29,22 +37,15 @@ html, body {
     width: 100%;
 }
 
-.form-elements-item--default{
+.form-elements-item{
     margin-bottom: 40px;
-    margin-top: 85px;
 }
 
 .form-elements__descr {
-    //position: absolute;
-    // width: 72px;
-    // height: 15px;
-    // left: 141px;
-    // top: 143px;
     font-family: Montserrat, OpenSans, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
-    //line-height: 15px;
     text-transform: uppercase;    
     color: #1F2041;
     margin-bottom: 5px;
@@ -77,7 +78,6 @@ html, body {
 }
 
 /* Dropdown */
-
 
 .form-elements__input--dropdown{
     border: 1px solid rgba(31, 32, 65, 0.25);
@@ -216,12 +216,12 @@ html, body {
     height: 44px;
 }
 
-.datapicker-wrapper{
+.datepicker-wrapper{
     margin-right: 20px;
     margin-bottom: 5px;
 }
 
-.datapicker-wrapper--right{
+.datepicker-wrapper--right{
     margin-right: 0;
 }
 
@@ -255,7 +255,7 @@ html, body {
 .material-icons--left-datepicker{
     width: 38px;
     height: 44px;
-    font-family: Material Icons;
+    font-family: Material Icons, OpenSans, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -274,3 +274,126 @@ html, body {
     display: flex;
     align-items: center;
 }
+
+// фильтр диапазона выбранных дат
+
+.form-elements__filter-date{
+    display: flex;
+    flex-direction: row;
+    width: 266px;
+    height: 44px;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
+    padding: 13px 0 13px 15px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.text-field--filter{
+    width: 222px;
+    background: #FFFFFF;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    cursor: pointer;
+}
+
+.material-icons--filter{
+    width: 38px;
+    height: 44px;
+    font-family: Material Icons, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    color: rgba(31, 32, 65, 0.5);
+    line-height: 46px;
+}
+
+// поле отправки почты
+
+.form-elements__email-field{
+    display: flex;
+    flex-direction: row;
+    width: 267px;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.text-field--email{
+    width: 223px;
+    outline: none;
+    border: none;
+    padding: 13px 0 13px 15px;
+}
+
+.material-icons--email{
+    width: 44px;
+    font-family: Material Icons, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+    background-size: cover;
+    color: #bc9cff;
+    text-align: center;
+}
+
+// Checkbox
+.form-elements__checkbox{
+    display: flex;
+    max-width: 222px;
+    width: 100%;
+}
+.checkboxs{
+    margin-top: 17px;
+}
+
+.checkbox{
+    width: 0;
+}
+
+.checkbox__marks{
+    width: 20px;
+    height: 20px;
+    background: #FFFFFF;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    box-sizing: border-box;
+    border-radius: 4px;
+    outline: none;
+    display: block;
+    margin-right: 10px;
+}
+
+.checkbox__mark{
+    font-size: 13px;
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: none;
+    padding-left: 3px;
+}
+
+.checkbox__mark--checked{
+    display: block;
+}
+
+.form-elements__checkbox{
+    margin-bottom: 13px;
+}
+
+.form-elements__checkbox:last-child{
+    margin-bottom: 0;
+}
+
+.js-checkbox{
+    display: flex;
+    flex-direction: row;
+}
+
