переписала логику checkbox  с использованием атрибута  data-type

--- a/toxin/src/pages/form-elements/form-elements.pug
+++ b/toxin/src/pages/form-elements/form-elements.pug
@@ -118,17 +118,17 @@ block form-section
                                         div(class="checkbox__marks")
                                             i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-smoke")
                                         label(for="checkbox-smoke" class="checkbox-descr") Можно курить
-                                            input(class="checkbox" type="checkbox" id="checkbox-smoke")
+                                            input(class="checkbox" type="checkbox" id="checkbox-smoke" data-type="smoke")
                                 .form-elements__checkbox
                                     .js-checkbox
                                         div(class="checkbox__marks")
                                             i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-nursling")
                                         label(for="checkbox-nursling" class="checkbox-descr") Можно с питомцами
-                                            input(class="checkbox" type="checkbox" id="checkbox-nursling")
+                                            input(class="checkbox" type="checkbox" id="checkbox-nursling" data-type="nursling")
                                 .form-elements__checkbox
                                     .js-checkbox
                                         div(class="checkbox__marks")
                                             i(class="fa fa-check checkbox__mark" aria-hidden="true" id="mark-guests")
                                         label(for="checkbox-guests" class="checkbox-descr") Можно пригласить гостей (до 10 человек)
-                                            input(class="checkbox" type="checkbox" id="checkbox-guests")
+                                            input(class="checkbox" type="checkbox" id="checkbox-guests" data-type="guests")
 
